[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robotfail-mcp"
version = "0.1.0"
description = "MCP server for RobotFail — let AI agents hire humans for physical tasks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
robotfail-mcp = "robotfail_mcp.server:main"
